added a bunch of keymaps.

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "chimera",
   "main": "./lib/chimera",
-  "version": "0.0.1",
-  "description": "A short description of your package",
+  "version": "0.0.0",
+  "description": "An editor built on atom, splicing the best DNA of multiple text editors",
   "keywords": [
   ],
-  "repository": "https://github.com/atom/chimera",
+  "repository": "https://github.com/toumorokoshi/atom-chimera",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
